# advent-of-code-2025

./: Cargo.toml  README.md
benches/: days.rs
src/: lib.rs
src/days/: day01.rs  day02.rs  day03.rs  day04.rs
