[package]
name = "advent-of-code-2025"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
arrayvec = "0.7.6"
bstr = "1.12.1"
bumpalo = "3.19.0"
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
fxhash = "0.2.1"
itertools = "0.14.0"
itoa = "1.0.15"
nom = "8.0.0"
num = "0.4.3"
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["blocking"] }
ring-algorithm = "0.8.0"
strum = { version = "0.27.2", features = ["derive"] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"

[dev-dependencies]
criterion = { version = "0.8.0", features = ["html_reports"] }

[[bench]]
name = "days"
harness = false

[profile.bench]
debug = true
